fixed a typo and better display of the actual flow

--- a/code/simulation/FlowApproach.ipynb
+++ b/code/simulation/FlowApproach.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,27 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, ({'A', 'S'}, {'B', 'D', 'X', 'Y'}))"
+       "(11, ({'A', 'B', 'D', 'S', 'X'}, {'Y'}))"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.minimum_cut(channel_graph, \"S\", \"D\")"
+    "nx.minimum_cut(channel_graph, \"B\", \"Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,22 +128,22 @@
     "                if amt <= forward_flow:\n",
     "                    # 1/ P(X>=f | X >= f - amt) = (c+1-f)/(c+1-f+a)\n",
     "                    inverse_prob = (channel_capacity+1-forward_flow + amt)/(channel_capacity+1-forward_flow)\n",
-    "                    residual.add_edge(v,u,weight=-1*log(inverse_prob))\n",
+    "                    residual.add_edge(v,u,weight=-log(inverse_prob))\n",
     "            elif backward_flow > 0:\n",
     "                if backward_flow + amt <= channel_capacity:\n",
     "                    prob = (channel_capacity - backward_flow + 1 - amt)/(channel_capacity + 1 - backward_flow)\n",
-    "                    residual.add_edge(v,u,weight=1-log(prob))\n",
+    "                    residual.add_edge(v,u,weight=-log(prob))\n",
     "                if amt <= backward_flow:\n",
     "                    # 1/ P(X>=f | X >= f - amt) = (c+1-f)/(c+1-f+a)\n",
     "                    inverse_prob = (channel_capacity+1-backward_flow+amt)/(channel_capacity+1-backward_flow)\n",
-    "                    residual.add_edge(u,v,weight=1-log(inverse_prob))\n",
+    "                    residual.add_edge(u,v,weight=-log(inverse_prob))\n",
     "    return residual\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +157,21 @@
     "    for src,dest in next_hop(path):\n",
     "        flow[src][dest]+=amt\n",
     "\n",
+    "def print_flow(flow):\n",
+    "    for src, value in flow.items():\n",
+    "        for dest, f in value.items():\n",
+    "            if f > 0:\n",
+    "                print(src,dest,f)\n",
+    "        \n",
     "#update_flow(flow,path,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
+   "execution_count": 153,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -185,7 +193,9 @@
       "D B 0.8\n",
       "D Y 0.8\n",
       "['S', 'X', 'B', 'D']\n",
-      "{'S': {'A': 0, 'X': 1}, 'A': {'S': 0, 'B': 0}, 'X': {'S': 0, 'B': 1, 'Y': 0}, 'B': {'A': 0, 'X': 0, 'D': 1}, 'Y': {'X': 0, 'D': 0}, 'D': {'B': 0, 'Y': 0}}\n",
+      "S X 1\n",
+      "X B 1\n",
+      "B D 1\n",
       "0.36000000000000004\n",
       "S A 0.6666666666666666\n",
       "A S 0.6666666666666666\n",
@@ -201,7 +211,14 @@
       "D B 1.25\n",
       "D Y 0.8\n",
       "['S', 'A', 'B', 'X', 'Y', 'D']\n",
-      "{'S': {'A': 1, 'X': 1}, 'A': {'S': 0, 'B': 1}, 'X': {'S': 0, 'B': 1, 'Y': 1}, 'B': {'A': 0, 'X': 1, 'D': 1}, 'Y': {'X': 0, 'D': 1}, 'D': {'B': 0, 'Y': 0}}\n",
+      "S A 1\n",
+      "S X 1\n",
+      "A B 1\n",
+      "X B 1\n",
+      "X Y 1\n",
+      "B X 1\n",
+      "B D 1\n",
+      "Y D 1\n",
       "0.12444444444444445\n",
       "S A 0.5\n",
       "A S 1.5\n",
@@ -217,40 +234,32 @@
       "D B 1.25\n",
       "D Y 1.25\n",
       "['S', 'A', 'B', 'D']\n",
-      "{'S': {'A': 2, 'X': 1}, 'A': {'S': 0, 'B': 2}, 'X': {'S': 0, 'B': 0, 'Y': 1}, 'B': {'A': 0, 'X': 0, 'D': 2}, 'Y': {'X': 0, 'D': 1}, 'D': {'B': 0, 'Y': 0}}\n",
+      "S A 2\n",
+      "S X 1\n",
+      "A B 2\n",
+      "X Y 1\n",
+      "B D 2\n",
+      "Y D 1\n",
       "0.02333333333333333\n"
      ]
     }
    ],
    "source": [
+    "S = \"S\"\n",
+    "D = \"D\"\n",
+    "\n",
     "flow=generate_null_flow(channel_graph)\n",
     "print(compute_probability_of_flow(flow,channel_graph))\n",
-    "res = compute_residual_graph(channel_graph,flow,1)\n",
-    "for u,v in res.edges():\n",
-    "    print(u,v,2**-res[u][v][\"weight\"])\n",
-    "path = nx.bellman_ford_path(res,\"S\",\"D\",weight=\"weight\")\n",
-    "print(path)\n",
-    "update_flow(flow,path,1)\n",
-    "print(flow)\n",
-    "print(compute_probability_of_flow(flow,channel_graph))\n",
-    "\n",
-    "res = compute_residual_graph(channel_graph,flow,1)\n",
-    "for u,v in res.edges():\n",
-    "    print(u,v,2**-res[u][v][\"weight\"])\n",
-    "path = nx.bellman_ford_path(res,\"S\",\"D\",weight=\"weight\")\n",
-    "print(path)\n",
-    "update_flow(flow,path,1)\n",
-    "print(flow)\n",
-    "print(compute_probability_of_flow(flow,channel_graph))\n",
-    "\n",
-    "res = compute_residual_graph(channel_graph,flow,1)\n",
-    "for u,v in res.edges():\n",
-    "    print(u,v,2**-res[u][v][\"weight\"])\n",
-    "path = nx.bellman_ford_path(res,\"S\",\"D\",weight=\"weight\")\n",
-    "print(path)\n",
-    "update_flow(flow,path,1)\n",
-    "print(flow)\n",
-    "print(compute_probability_of_flow(flow,channel_graph))\n"
+    "    \n",
+    "for a in range(1,nx.minimum_cut(channel_graph, S, D)[0]+1):\n",
+    "    res = compute_residual_graph(channel_graph,flow,1)\n",
+    "    for u,v in res.edges():\n",
+    "        print(u,v,2**-res[u][v][\"weight\"])\n",
+    "    path = nx.bellman_ford_path(res,S,D,weight=\"weight\")\n",
+    "    print(path)\n",
+    "    update_flow(flow,path,1)\n",
+    "    print_flow(flow)\n",
+    "    print(compute_probability_of_flow(flow,channel_graph))\n"
    ]
   },
   {
