added a first try to implement min cost flow with a scaling approach. unfortunatelly I have negative cycles. either I misunderstand something or I made a bug or destroyed while debugging. but need a break now

--- a/code/simulation/FlowApproach.ipynb
+++ b/code/simulation/FlowApproach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
+    "import time\n",
     "log = math.log2"
    ]
   },
@@ -263,18 +264,208 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Linearized problem\n",
+    "\n",
+    "note that our cost function -log((c+1-a)/(c+1)) has a linear taylor expansion of a/(c+1) thus we can try to solve a linear min cost flow problem with a standard lib and use 1/(c+1) as our unit cost function"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "G = nx.DiGraph()\n",
+    "G.add_node(\"a\", demand=-5)\n",
+    "G.add_node(\"d\", demand=5)\n",
+    "G.add_edge(\"a\", \"b\", weight=3, capacity=4)\n",
+    "G.add_edge(\"a\", \"c\", weight=6, capacity=10)\n",
+    "G.add_edge(\"b\", \"d\", weight=1, capacity=9)\n",
+    "G.add_edge(\"c\", \"d\", weight=2, capacity=5)\n",
+    "flowDict = nx.min_cost_flow(G)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_flow_graph():\n",
+    "    # retrieve this by: lightning-cli listchannels > listchannels.json\n",
+    "    f = open(\"listchannels.json\")\n",
+    "    jsn = json.load(f)\n",
+    "    G = nx.DiGraph()\n",
+    "    for channel in jsn[\"channels\"]:\n",
+    "        src = channel[\"source\"]\n",
+    "        dest = channel[\"destination\"]\n",
+    "        cap = int(int(channel[\"satoshis\"])/1000)\n",
+    "        sid = channel[\"short_channel_id\"]\n",
+    "        G.add_edge(src,dest,weight=1.0/(cap+1)**2, capacity=cap,sid=sid)\n",
+    "    return G\n",
+    "\n",
+    "F = make_flow_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nx.set_node_attributes(F,\"demand\")\n",
+    "F.nodes[\"03efccf2c383d7bf340da9a3f02e2c23104a0e4fe8ac1a880c8e2dc92fbdacd9df\"][\"demand\"]=9200\n",
+    "F.nodes[\"022c699df736064b51a33017abfc4d577d133f7124ac117d3d9f9633b6297a3b6a\"][\"demand\"]=-9200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'demand': 9200}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F.nodes[\"03efccf2c383d7bf340da9a3f02e2c23104a0e4fe8ac1a880c8e2dc92fbdacd9df\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.31996607780456543\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = time.time()\n",
+    "flow = nx.min_cost_flow(F)\n",
+    "e = time.time()\n",
+    "print(e-s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03abf6f 03efccf 7000 7000 1.0\n",
+      "0316787 03abf6f 7000 16777 0.4172378851999762\n",
+      "022c699 02d4b43 9200 16777 0.5483697919771116\n",
+      "032679f 03efccf 2200 9000 0.24444444444444444\n",
+      "03fb822 0390235 2200 9000 0.24444444444444444\n",
+      "03dab87 03fb822 2200 16777 0.13113190677713538\n",
+      "03dab87 0316787 7000 16777 0.4172378851999762\n",
+      "0390235 032679f 2200 9000 0.24444444444444444\n",
+      "0261658 03dab87 9200 16777 0.5483697919771116\n",
+      "02d4b43 0261658 9200 16777 0.5483697919771116\n",
+      "1.6753541893644523e-06 0.0003798740297121995\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = 1\n",
+    "cost = 0\n",
+    "for src, dic in flow.items():\n",
+    "    for dest, f in dic.items():\n",
+    "        if f>0:\n",
+    "            c = F[src][dest][\"capacity\"]\n",
+    "            print(src[:7],dest[:7],f,c,f/c)\n",
+    "            prob*=(c+1-f)/(c+1)\n",
+    "            cost += F[src][dest][\"weight\"]*f\n",
+    "print(prob,cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13773083212754972\n"
+     ]
+    }
+   ],
+   "source": [
+    "path1 = [200000,15000,10000]\n",
+    "path2 = [16777, 9000]\n",
+    "\n",
+    "f1 = 4500\n",
+    "f2 = 4500\n",
+    "\n",
+    "p = 1\n",
+    "for x in path1:\n",
+    "    p*=(x+1-f1)/(x+1)\n",
+    "for x in path2:\n",
+    "    p*=(x+1-f2)/(x+1)\n",
+    "print(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00011707140364226854"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/9000 + 1/167777"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00017166666666666667"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/200000 + 1/15000 +1/ 10000"
+   ]
   },
   {
    "cell_type": "code",
