i believe to have a nearly correct version of the algorithm. on our test example it computes and in verbose mode has the output that one would expect. on the large LN graph it fails but I guess / hope this is fixable

--- a/code/simulation/MinCostMaxFlowScalingAugmentingPaths.ipynb
+++ b/code/simulation/MinCostMaxFlowScalingAugmentingPaths.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,15 +79,29 @@
     "        \n",
     "def augment_path(flow,path,amt):\n",
     "    for src,dest in next_hop(path):\n",
-    "        flow[src][dest]+=amt\n",
+    "        if flow[dest][src]>0:\n",
+    "            flow[dest][src]-=amt\n",
+    "        else:\n",
+    "            flow[src][dest]+=amt\n",
     "\n",
     "def cost(x,c):\n",
-    "    if c%2==0:\n",
+    "    #####if c%2==0:\n",
     "        #print(x)\n",
-    "        return 4* x**2\n",
-    "    else:\n",
-    "        return x**2\n",
-    "#    return log(c+1)-log(c+1-x)\n",
+    "    #####    return 4* x**2\n",
+    "    #####else:\n",
+    "    #####    return x**2\n",
+    "    return log(c+1)-log(c+1-x)\n",
+    "\n",
+    "def path_str(path):\n",
+    "    it = path[0]\n",
+    "    if len(it)>5:\n",
+    "        it = it[:5]\n",
+    "    res = it\n",
+    "    for src, dest in next_hop(path):\n",
+    "        if len(dest)>5:\n",
+    "            dest = dest[:5]\n",
+    "        res += \" {}\".format(dest)\n",
+    "    return res\n",
     "\n",
     "SRC = \"03efccf2c383d7bf340da9a3f02e2c23104a0e4fe8ac1a880c8e2dc92fbdacd9df\"\n",
     "DEST = \"022c699df736064b51a33017abfc4d577d133f7124ac117d3d9f9633b6297a3b6a\"\n",
@@ -96,19 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "def print_residual(r,G,x):\n",
+    "    for i,j in G.edges():\n",
+    "        cap = G[i][j][\"cap\"]\n",
+    "        f = x[i][j]\n",
+    "        print(\"src: {} dest: {} cap: {} flow: {}\".format(i,j,cap,f))\n",
+    "        if r.has_edge(i,j):\n",
+    "            print(i,j,r[i][j][\"weight\"])\n",
+    "        if r.has_edge(j,i):\n",
+    "            print(j,i,r[j][i][\"weight\"])        \n",
     "\n",
     "def compute_delta_residual_network(G,x,delta,C=cost):\n",
+    "    #####print(\"{}-Residual net for flow x={}\".format(delta,x))\n",
     "    residual = nx.DiGraph()\n",
     "    for i, j in G.edges():\n",
     "        #print(i,j)\n",
     "        cap = G[i][j][\"cap\"]\n",
     "        f = x[i][j]\n",
-    "        print(\"src: {} dest: {} cap: {} flow: {} delta: {}\".format(i,j,cap,f,delta))\n",
+    "        \n",
     "        if x[i][j] == 0 and x[j][i]==0: # no flow:             \n",
     "            if delta<=cap:\n",
     "                unit_cost = (C(f + delta, cap) - C(f,cap))/delta\n",
@@ -122,20 +145,15 @@
     "            if f+delta <=cap:\n",
     "                residual.add_edge(i,j,weight=(C(f + delta, cap) - C(f,cap))/delta)\n",
     "            if delta <= f:#backward flow\n",
-    "                print(\"HERE!!!\",C(f - delta, cap), - C(f,cap),delta)\n",
-    "                residual.add_edge(j,i,weight=(C(f - delta, cap) - C(f,cap))/(2*delta))\n",
+    "                #print(\"HERE!!!\",C(f - delta, cap), - C(f,cap),delta)\n",
+    "                residual.add_edge(j,i,weight=(C(f - delta, cap) - C(f,cap))/(delta))\n",
     "        else: # if flow was in other direction enter in the other direction\n",
     "            f=x[j][i]\n",
     "            if f+delta <=cap:\n",
     "                residual.add_edge(j,i,weight=(C(f + delta, cap) - C(f,cap))/delta)\n",
     "            if delta <= f:#backward flow\n",
-    "                residual.add_edge(i,j,weight=(C(f - delta, cap) - C(f,cap))/(2*delta))\n",
-    "        \n",
-    "        ## DEBUG\n",
-    "        if residual.has_edge(i,j):\n",
-    "            print(i,j,residual[i][j][\"weight\"])\n",
-    "        if residual.has_edge(j,i):\n",
-    "            print(j,i,residual[j][i][\"weight\"])\n",
+    "                residual.add_edge(i,j,weight=(C(f - delta, cap) - C(f,cap))/(delta))\n",
+    "    #####print_residual(residual,G,x)\n",
     "    return residual\n",
     "    \n",
     "#compute_delta_residual_network(channel_graph,x,10)"
@@ -143,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +173,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fulfill_reduced_cost_optimiality_rule(R,pi,delta,e,x):\n",
+    "    to_remove=[]\n",
+    "    for i,j in R.edges():\n",
+    "        #test and correct reduced cost optimality condition\n",
+    "        if R[i][j][\"weight\"]+pi[i]-pi[j] <0: #TODO: also test R_ij capacity >= delta. so far only unit costs in residual net\n",
+    "\n",
+    "            #might be too simplisic as flow in oposite direction might exist which we would have to decrease\n",
+    "            #####print(\"From {} to {} reduced cost: {} flow: {}\".format(i,j,R[i][j][\"weight\"]+pi[i]-pi[j],x[j][i]),R[i][j][\"weight\"],pi[i],pi[j])\n",
+    "\n",
+    "            #this means we save costs if we just ship from i to j!\n",
+    "            \n",
+    "            #edge can only have negative reduced cost in two cases: \n",
+    "            # 1. there was flow in the other direction --> reduce by 1\n",
+    "            # 2. there was NO flow in either direction --> increase flow in oposite direction\n",
+    "\n",
+    "            if x[j][i]>=delta:\n",
+    "                x[j][i]-=delta\n",
+    "                #e[j]+=delta\n",
+    "                #e[i]-=delta\n",
+    "            else:\n",
+    "                x[i][j]+=delta\n",
+    "                #e[j]+=delta\n",
+    "                #e[i]-=delta\n",
+    "                \n",
+    "            #if x[i][j]>0:\n",
+    "            #    print(\"!!!! ther was never flow in the direction in which the residual edges are not cost optimal\",i,j,x[i][j])\n",
+    "            to_remove.append((i,j))\n",
+    "\n",
+    "            e[i]-=delta\n",
+    "            e[j]+=delta\n",
+    "            \n",
+    "    if len(to_remove)==0:\n",
+    "        return True\n",
+    "    for i,j in to_remove:\n",
+    "        R.remove_edge(i,j)\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
    "metadata": {
     "scrolled": false
    },
@@ -165,76 +227,12 @@
      "output_type": "stream",
      "text": [
       "2-scaling phase\n",
-      "src: S dest: A cap: 2 flow: 0 delta: 2\n",
-      "S A 8.0\n",
-      "A S 8.0\n",
-      "src: S dest: X cap: 1 flow: 0 delta: 2\n",
-      "src: A dest: B cap: 2 flow: 0 delta: 2\n",
-      "A B 8.0\n",
-      "B A 8.0\n",
-      "src: X dest: B cap: 9 flow: 0 delta: 2\n",
-      "X B 2.0\n",
-      "B X 2.0\n",
-      "src: X dest: Y cap: 7 flow: 0 delta: 2\n",
-      "X Y 2.0\n",
-      "Y X 2.0\n",
-      "src: B dest: D cap: 4 flow: 0 delta: 2\n",
-      "B D 8.0\n",
-      "D B 8.0\n",
-      "src: Y dest: D cap: 4 flow: 0 delta: 2\n",
-      "Y D 8.0\n",
-      "D Y 8.0\n",
-      "['S'] ['D']\n",
-      "S 0\n",
-      "A 8.0\n",
-      "B 16.0\n",
-      "X 18.0\n",
-      "D 24.0\n",
-      "Y 20.0\n",
-      "augmented path: ['S', 'A', 'B', 'D'] with: 2\n",
-      "flow:  {'S': {'A': 2, 'X': 0}, 'A': {'S': 0, 'B': 2}, 'X': {'S': 0, 'B': 0, 'Y': 0}, 'B': {'A': 0, 'X': 0, 'D': 2}, 'Y': {'X': 0, 'D': 0}, 'D': {'B': 0, 'Y': 0}}\n",
+      "augmented path: S A B D with: 2\n",
       "1-scaling phase\n",
-      "src: S dest: A cap: 2 flow: 2 delta: 1\n",
-      "HERE!!! 4 -16 1\n",
-      "A S -6.0\n",
-      "src: S dest: X cap: 1 flow: 0 delta: 1\n",
-      "S X 1.0\n",
-      "X S 1.0\n",
-      "src: A dest: B cap: 2 flow: 2 delta: 1\n",
-      "HERE!!! 4 -16 1\n",
-      "B A -6.0\n",
-      "src: X dest: B cap: 9 flow: 0 delta: 1\n",
-      "X B 1.0\n",
-      "B X 1.0\n",
-      "src: X dest: Y cap: 7 flow: 0 delta: 1\n",
-      "X Y 1.0\n",
-      "Y X 1.0\n",
-      "src: B dest: D cap: 4 flow: 2 delta: 1\n",
-      "HERE!!! 4 -16 1\n",
-      "B D 20.0\n",
-      "D B -6.0\n",
-      "src: Y dest: D cap: 4 flow: 0 delta: 1\n",
-      "Y D 4.0\n",
-      "D Y 4.0\n",
-      "correct reduced cost condition:  0 A S -6.0 -8.0 0\n",
-      "correct reduced cost condition:  0 X S 1.0 -18.0 0\n",
-      "correct reduced cost condition:  0 X B 1.0 -18.0 -16.0\n",
-      "correct reduced cost condition:  0 B A -6.0 -16.0 -8.0\n",
-      "correct reduced cost condition:  0 Y X 1.0 -20.0 -18.0\n",
-      "correct reduced cost condition:  0 D B -6.0 -24.0 -16.0\n",
-      "['S', 'B'] ['X', 'Y', 'D']\n",
-      "B 0\n",
-      "X 3.0\n",
-      "D 14.0\n",
-      "Y 6.0\n",
-      "augmented path: ['B', 'X', 'Y', 'D'] with: 1\n",
-      "flow:  {'S': {'A': 3, 'X': 1}, 'A': {'S': 0, 'B': 3}, 'X': {'S': 0, 'B': 0, 'Y': 2}, 'B': {'A': 0, 'X': 2, 'D': 3}, 'Y': {'X': 0, 'D': 1}, 'D': {'B': 0, 'Y': 0}}\n",
-      "S 0\n",
-      "X 22.0\n",
-      "Y 28.0\n",
-      "D 44.0\n",
-      "augmented path: ['S', 'X', 'Y'] with: 1\n",
-      "flow:  {'S': {'A': 3, 'X': 2}, 'A': {'S': 0, 'B': 3}, 'X': {'S': 0, 'B': 0, 'Y': 3}, 'B': {'A': 0, 'X': 2, 'D': 3}, 'Y': {'X': 0, 'D': 1}, 'D': {'B': 0, 'Y': 0}}\n"
+      "augmented path: B D with: 1\n",
+      "augmented path: S X Y with: 1\n",
+      "augmented path: S X with: 1\n",
+      "min cost max flow:  {'S': {'A': 1, 'X': 1}, 'A': {'S': 0, 'B': 1}, 'X': {'S': 0, 'B': 1, 'Y': 0}, 'B': {'A': 0, 'X': 0, 'D': 2}, 'Y': {'X': 0, 'D': 0}, 'D': {'B': 0, 'Y': 0}}\n"
      ]
     }
    ],
@@ -249,31 +247,17 @@
     "    while delta >= 1:\n",
     "        print(\"{}-scaling phase\".format(delta))\n",
     "        R = compute_delta_residual_network(G,x,delta)\n",
+    "        #####print(\"excesses before optimality: \", e)\n",
+    "        #####print(\"flow before optimality\", x)\n",
+    "        #####print(\"delta: \", delta)\n",
+    "        fulfill_reduced_cost_optimiality_rule(R,pi,delta,e,x)\n",
     "        \n",
-    "        to_remove=[]\n",
-    "        for i,j in R.edges():\n",
-    "            #test and correct reduced cost optimality condition\n",
-    "            if R[i][j][\"weight\"]+pi[i]-pi[j] <0:\n",
-    "                \n",
-    "                #might be too simplisic as flow in oposite direction might exist which we would have to decrease\n",
-    "                print(\"correct reduced cost condition: \",x[i][j],i,j,R[i][j][\"weight\"],pi[i],pi[j])\n",
-    "                #print(\"backwards: \",j,i,R[j][i][\"weight\"],pi[j],pi[i])\n",
-    "                if x[i][j]>=delta:\n",
-    "                    x[i][j]+=delta\n",
-    "                else:\n",
-    "                    x[j][i]+=delta\n",
-    "                to_remove.append((i,j))\n",
-    "                e[i]-=delta\n",
-    "                e[j]+=delta\n",
-    "                \n",
-    "        for i,j in to_remove:\n",
-    "            R.remove_edge(i,j)\n",
-    "        ###print(e)\n",
-    "        ###print(x) \n",
+    "        #####print(\"excesses: \", e)\n",
+    "        #####print(\"temporary flow\", x) \n",
     "        #R = compute_delta_residual_network(G,x,delta)\n",
     "        S = [n for n,k in e.items() if k>=delta]\n",
     "        T = [n for n,k in e.items() if k<=-delta]\n",
-    "        print(S,T)\n",
+    "        #####print(\"S(delta): {}, T(delta):{}\".format(S,T))\n",
     "        while len(S) >0 and len(T)>0:\n",
     "            k=S[-1]\n",
     "            l=T[-1]\n",
@@ -281,42 +265,64 @@
     "            T=T[:-1]\n",
     "            #path = nx.dijkstra_path(R,k,l)\n",
     "            apply_reduced_cost(R,pi)\n",
-    "            #distances, paths = nx.single_source_dijkstra(R,k,weight=\"rc\")\n",
-    "            distances, paths = nx.single_source_bellman_ford(R,k,weight=\"rc\")\n",
+    "            distances, paths = nx.single_source_dijkstra(R,k,weight=\"rc\")\n",
+    "            #distances, paths = nx.single_source_bellman_ford(R,k,weight=\"rc\")\n",
+    "            #####print(\"Distances from {}\".format(k))\n",
     "            for n, d_value in distances.items():\n",
-    "                print(n,d_value)\n",
+    "                #####print(n,d_value)\n",
     "                #if n in pi:\n",
     "                pi[n]-=d_value\n",
+    "            if l not in paths:\n",
+    "                continue\n",
+    "            \n",
     "            path = paths[l]\n",
     "            augment_path(x,path,delta)\n",
-    "            print(\"augmented path:\", path, \"with:\", delta)\n",
+    "            print(\"augmented path:\", path_str(path), \"with:\", delta)\n",
     "            e[k]-=delta\n",
     "            e[l]+=delta\n",
     "            ###print(e)\n",
-    "            print(\"flow: \",x)\n",
+    "            #####print(\"flow: \",x)\n",
+    "            #R = compute_delta_residual_network(G,x,delta) # could be ment as remove edges of path instead of recompute\n",
+    "            for src, dest in next_hop(path):\n",
+    "                #print(src, dest, x[src])\n",
+    "                if G.has_edge(src,dest):\n",
+    "                    if x[src][dest]==G[src][dest][\"cap\"]:\n",
+    "                        R.remove_edge(src,dest)\n",
+    "                if G.has_edge(dest,src):\n",
+    "                    if x[src][dest]==G[dest][src][\"cap\"]:\n",
+    "                        R.remove_edge(src,dest)\n",
+    "            #####print_residual(R,G,x)\n",
+    "            #####print(\"excesses: \",e)\n",
+    "            #apply_reduced_cost(R,pi)\n",
+    "            #if delta < 2:\n",
+    "            #fulfill_reduced_cost_optimiality_rule(R,pi,delta,e,x)\n",
+    "            S = [n for n,k in e.items() if k>=delta]\n",
+    "            T = [n for n,k in e.items() if k<=-delta]\n",
+    "\n",
     "        delta = int(delta/2)\n",
     "    return x\n",
     "#x = cpacity_scaling(SRC,DEST, FLOW, channel_graph)\n",
-    "x = cpacity_scaling(\"S\",\"D\", 2, G)\n"
+    "x = cpacity_scaling(\"S\",\"D\", 2, G)\n",
+    "print(\"min cost max flow: \", x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A': {'B': 3, 'S': 0},\n",
-       " 'B': {'A': 0, 'D': 3, 'X': 2},\n",
+       "{'A': {'B': 1, 'S': 0},\n",
+       " 'B': {'A': 0, 'D': 1, 'X': 1},\n",
        " 'D': {'B': 0, 'Y': 0},\n",
-       " 'S': {'A': 3, 'X': 2},\n",
-       " 'X': {'B': 0, 'S': 0, 'Y': 3},\n",
-       " 'Y': {'D': 1, 'X': 0}}"
+       " 'S': {'A': 1, 'X': 1},\n",
+       " 'X': {'B': 0, 'S': 0, 'Y': 1},\n",
+       " 'Y': {'D': 0, 'X': 0}}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
