--- a/code/simulation/MinCostMaxFlowScalingAugmentingPaths.ipynb
+++ b/code/simulation/MinCostMaxFlowScalingAugmentingPaths.ipynb
@@ -51,10 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def cost(a,c):\n",
+    "    \"\"\"returns the negative log probability for the success to deliver `a` satoshis through a channel of capacity `c`\"\"\"\n",
+    "    return log(c+1)-log(c+1-a)    \n",
+    "\n",
     "def import_channel_graph():\n",
     "    \"\"\"\n",
     "    parses the channel_graph from the c-lightning API. one coule just create a different function here to parse\n",
@@ -78,8 +82,8 @@
     "        # Thus for better understandability we made the assumption of a graph without parallel channels at this point.\n",
     "        \n",
     "        if G.has_edge(src,dest)==False and G.has_edge(dest,src)==False:\n",
-    "            G.add_edge(src,dest,cap=cap,sid=sid)\n",
-    "            G.add_edge(dest,src,cap=cap,sid=sid)\n",
+    "            G.add_edge(src,dest,cap=cap,sid=sid,cost=cost)\n",
+    "            G.add_edge(dest,src,cap=cap,sid=sid,cost=cost)\n",
     "        \n",
     "        \n",
     "    return G\n",
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,10 +141,7 @@
     "        flow[u][v]=0\n",
     "        flow[v][u]=0\n",
     "    return flow\n",
-    "\n",
-    "def cost(a,c):\n",
-    "    \"\"\"returns the negative log probability for the success to deliver `a` satoshis through a channel of capacity `c`\"\"\"\n",
-    "    return log(c+1)-log(c+1-a)    "
+    "\n"
    ]
   },
   {
@@ -161,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_delta_residual_network(G,x,delta,pi,C=cost):\n",
+    "def compute_delta_residual_network(G,x,delta,pi):#,C=cost):\n",
     "    \"\"\"\n",
     "    The delta residual network is returned as a multigraph. \n",
     "    \n",
@@ -184,7 +185,7 @@
     "    for i, j in G.edges():\n",
     "        cap = G[i][j][\"cap\"]\n",
     "        f = x[i][j]\n",
-    "\n",
+    "        C = G[i][j][\"cost\"]\n",
     "        if f+delta <=cap:\n",
     "            unit_cost = (C(f + delta, cap) - C(f,cap))/delta\n",
     "            residual.add_edge(i,j,uc= unit_cost,rc = unit_cost - pi[i] + pi[j],original_cap=cap)#,key=0,k=0)\n",
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {
     "scrolled": false
    },
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -411,20 +412,20 @@
    ],
    "source": [
     "E = nx.DiGraph()\n",
-    "E.add_edge(\"S\",\"A\",cap=2)\n",
-    "E.add_edge(\"A\",\"S\",cap=2)\n",
-    "E.add_edge(\"S\",\"X\",cap=1)\n",
-    "E.add_edge(\"X\",\"S\",cap=1)\n",
-    "E.add_edge(\"A\",\"B\",cap=2)\n",
-    "E.add_edge(\"B\",\"A\",cap=2)\n",
-    "E.add_edge(\"X\",\"B\",cap=9)\n",
-    "E.add_edge(\"B\",\"X\",cap=9)\n",
-    "E.add_edge(\"X\",\"Y\",cap=7)\n",
-    "E.add_edge(\"Y\",\"X\",cap=7)\n",
-    "E.add_edge(\"Y\",\"D\",cap=4)\n",
-    "E.add_edge(\"D\",\"Y\",cap=4)\n",
-    "E.add_edge(\"B\",\"D\",cap=4)\n",
-    "E.add_edge(\"D\",\"B\",cap=4)\n",
+    "E.add_edge(\"S\",\"A\",cap=2, cost=cost)\n",
+    "E.add_edge(\"A\",\"S\",cap=2, cost=cost)\n",
+    "E.add_edge(\"S\",\"X\",cap=1, cost=cost)\n",
+    "E.add_edge(\"X\",\"S\",cap=1, cost=cost)\n",
+    "E.add_edge(\"A\",\"B\",cap=2, cost=cost)\n",
+    "E.add_edge(\"B\",\"A\",cap=2, cost=cost)\n",
+    "E.add_edge(\"X\",\"B\",cap=9, cost=cost)\n",
+    "E.add_edge(\"B\",\"X\",cap=9, cost=cost)\n",
+    "E.add_edge(\"X\",\"Y\",cap=7, cost=cost)\n",
+    "E.add_edge(\"Y\",\"X\",cap=7, cost=cost)\n",
+    "E.add_edge(\"Y\",\"D\",cap=4, cost=cost)\n",
+    "E.add_edge(\"D\",\"Y\",cap=4, cost=cost)\n",
+    "E.add_edge(\"B\",\"D\",cap=4, cost=cost)\n",
+    "E.add_edge(\"D\",\"B\",cap=4, cost=cost)\n",
     "\n",
     "x = capacity_scaling_min_cost_flow(\"S\",\"D\",2,E)\n",
     "print(x)"
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +450,7 @@
       "augmented 11 paths in the 4-scaling phase and 53 paths in total\n",
       "augmented 11 paths in the 2-scaling phase and 64 paths in total\n",
       "augmented 11 paths in the 1-scaling phase and 75 paths in total\n",
-      "comutation took 22.910009092003747 seconds\n"
+      "comutation took 23.748095542017836 seconds\n"
      ]
     }
    ],
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,14 +489,14 @@
     "        c = G[s][d][\"cap\"]\n",
     "        f = x[s][d]\n",
     "        if f > 0:\n",
-    "            total_cost+=cost(f,c)\n",
+    "            total_cost+=G[s][d][\"cost\"](f,c)\n",
     "            \n",
     "    return total_cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 112,
    "metadata": {
     "scrolled": true
    },
@@ -504,8 +505,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min cost flow was optimal\n",
-      "min cost flow has probability:  0.13049445447505295\n"
+      "min cost flow was optimal\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 's' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-112-d2da1e1e9858>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"min cost flow was optimal\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"min cost flow has probability: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcompute_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-111-67ce6b4a90d0>\u001b[0m in \u001b[0;36mcompute_cost\u001b[0;34m(G, x)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mzerocost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mH\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"cap\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"balance\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mH\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"cost\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mzerocost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 's' referenced before assignment"
      ]
     }
    ],
@@ -643,25 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3360000 sats along 03efc 03267 022c6\n",
-      "50000 sats along 03efc 02247 03e28 022c6\n",
-      "400000 sats along 03efc 02247 0390b 022c6\n",
-      "410000 sats along 03efc 02247 03d37 022c6\n",
-      "410000 sats along 03efc 02247 024d2 022c6\n",
-      "410000 sats along 03efc 02247 031ce 022c6\n",
-      "410000 sats along 03efc 02247 022c2 022c6\n",
-      "10000 sats along 03efc 03cde 02d4b 022c6\n",
-      "870000 sats along 03efc 02247 02b68 03e28 022c6\n",
-      "2530000 sats along 03efc 03cde 03864 021c9 03d06 03e28 022c6\n",
-      "340000 sats along 03efc 02247 02e90 03864 021c9 03d06 03e28 022c6\n",
-      "with an expected total fee of 33.333 satoshi\n"
+      "with an expected total fee of 14.815 satoshi\n"
      ]
     }
    ],
@@ -679,7 +680,7 @@
     "            path = nx.shortest_path(G,s,d)\n",
     "            m = min(G[src][dest][\"weight\"] for src, dest in next_hop(path))\n",
     "            #t+=m\n",
-    "            print(\"{} sats along {}\".format(m*10000,path_str(path)))\n",
+    "            #print(\"{} sats along {}\".format(m*10000,path_str(path)))\n",
     "            paths.append((path,m))\n",
     "            for src,dest in next_hop(path):\n",
     "                G[src][dest][\"weight\"]-=m\n",
@@ -696,6 +697,191 @@
     "        #print(amt, channel_graph[src][dest][\"b\"], int(channel_graph[src][dest][\"r\"]*amt/100))\n",
     "        fees += channel_graph[src][dest][\"b\"] + int(channel_graph[src][dest][\"r\"]*amt/100)\n",
     "print(\"with an expected total fee of {} satoshi\".format(fees/1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulation in a realistic setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_balances(G):\n",
+    "    for s,d in G.edges():\n",
+    "        cap = G[s][d][\"cap\"]\n",
+    "        bal=int(random.random()*cap)\n",
+    "        G[s][d][\"balance\"]=bal\n",
+    "        G[d][s][\"balance\"]=cap - bal\n",
+    "\n",
+    "initialize_balances(channel_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_onion(amt, path, G):\n",
+    "    for src,dest in next_hop(path):\n",
+    "        if G[src][dest][\"balance\"]<amt:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def update_success_onion(amt,path,G):\n",
+    "    for src,dest in next_hop(path):\n",
+    "        G[src][dest][\"cap\"]-=amt\n",
+    "        G[src][dest][\"balance\"]-=amt\n",
+    "\n",
+    "def update_failure_onion(amt,path,G):\n",
+    "    for src,dest in next_hop(path):\n",
+    "        if G[src][dest][\"balance\"]>=amt:\n",
+    "            if amt > G[src][dest][\"min_possible\"]:\n",
+    "                G[src][dest][\"min_possible\"]=amt\n",
+    "        else:\n",
+    "            G[src][dest][\"cap\"]=amt\n",
+    "            break\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def pay(U, s, d, G):\n",
+    "    H = G.copy()\n",
+    "    for src,dest in H.edges():\n",
+    "        H[src][dest][\"min_possible\"] = 0\n",
+    "    zerocost = lambda a,c : 0\n",
+    "    for n in H[s]:\n",
+    "        H[s][n][\"cap\"]=H[s][n][\"balance\"]\n",
+    "        H[s][n][\"cost\"]=zerocost\n",
+    "        H[n][s][\"cap\"]=H[n][s][\"balance\"]\n",
+    "        H[n][s][\"cost\"]=zerocost\n",
+    "    \n",
+    "    \"\"\"for n,_ in H.in_edges(d):\n",
+    "        H[d][n][\"cap\"]=H[d][n][\"balance\"]\n",
+    "        H[d][n][\"cost\"]=zerocost\n",
+    "        H[n][d][\"cap\"]=H[n][d][\"balance\"]\n",
+    "        H[n][d][\"cost\"]=zerocost\n",
+    "    \"\"\"\n",
+    "    delivered = 0 \n",
+    "    fees = 0\n",
+    "    while delivered !=U:\n",
+    "        x = capacity_scaling_min_cost_flow(s,d,U-delivered, H)\n",
+    "        print(\"min cost flow to deliver {} has probability: {}\".format(U-delivered,2**-compute_cost(H,x)))\n",
+    "        \n",
+    "        paths = disect_flow_to_paths(x,s,d)\n",
+    "        for path,amt in paths:\n",
+    "            path_fees = 0\n",
+    "            print(\"{} sats along {}\".format(amt*10000,path_str(path)),end=\" \")\n",
+    "            if test_onion(amt,path,H)==True:\n",
+    "                print(\"succeeds\")\n",
+    "                update_success_onion(amt,path,H)\n",
+    "                delivered+=amt\n",
+    "                for src,dest in next_hop(path):\n",
+    "                    fees += channel_graph[src][dest][\"b\"] + int(channel_graph[src][dest][\"r\"]*amt/100)\n",
+    "            else:\n",
+    "                print(\"fails\")\n",
+    "                update_failure_onion(amt,path,H)\n",
+    "    \n",
+    "    print(\"with an expected total fee of {} satoshi\".format(fees/1000))\n",
+    "        \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "augmented 1 paths in the 512-scaling phase and 1 paths in total\n",
+      "augmented 2 paths in the 256-scaling phase and 3 paths in total\n",
+      "augmented 2 paths in the 128-scaling phase and 5 paths in total\n",
+      "augmented 3 paths in the 64-scaling phase and 8 paths in total\n",
+      "augmented 3 paths in the 32-scaling phase and 11 paths in total\n",
+      "augmented 3 paths in the 16-scaling phase and 14 paths in total\n",
+      "augmented 4 paths in the 8-scaling phase and 18 paths in total\n",
+      "augmented 4 paths in the 4-scaling phase and 22 paths in total\n",
+      "augmented 4 paths in the 2-scaling phase and 26 paths in total\n",
+      "augmented 4 paths in the 1-scaling phase and 30 paths in total\n",
+      "min cost flow to deliver 1023 has probability: 0.4170766444082663\n",
+      "7680000 sats along 03efc 03267 022c6 fails\n",
+      "290000 sats along 03efc 02b68 03e28 022c6 succeeds\n",
+      "2260000 sats along 03efc 03cde 03864 021c9 03d06 03e28 022c6 succeeds\n",
+      "augmented 1 paths in the 512-scaling phase and 1 paths in total\n",
+      "augmented 2 paths in the 256-scaling phase and 3 paths in total\n",
+      "augmented 3 paths in the 128-scaling phase and 6 paths in total\n",
+      "augmented 5 paths in the 64-scaling phase and 11 paths in total\n",
+      "augmented 7 paths in the 32-scaling phase and 18 paths in total\n",
+      "augmented 10 paths in the 16-scaling phase and 28 paths in total\n",
+      "augmented 12 paths in the 8-scaling phase and 40 paths in total\n",
+      "augmented 12 paths in the 4-scaling phase and 52 paths in total\n",
+      "augmented 13 paths in the 2-scaling phase and 65 paths in total\n",
+      "augmented 13 paths in the 1-scaling phase and 78 paths in total\n",
+      "min cost flow to deliver 768 has probability: 0.3957040858943402\n",
+      "220000 sats along 03efc 02e7c 0390b 022c6 succeeds\n",
+      "400000 sats along 03efc 0242a 02d4b 022c6 succeeds\n",
+      "420000 sats along 03efc 03abf 022c2 022c6 succeeds\n",
+      "590000 sats along 03efc 03267 0390b 022c6 succeeds\n",
+      "840000 sats along 03efc 03267 03d37 022c6 succeeds\n",
+      "850000 sats along 03efc 03267 031ce 022c6 succeeds\n",
+      "420000 sats along 03efc 03267 022c2 022c6 succeeds\n",
+      "290000 sats along 03efc 033d8 0390b 022c6 succeeds\n",
+      "20000 sats along 03efc 033d8 03d37 022c6 succeeds\n",
+      "10000 sats along 03efc 033d8 031ce 022c6 succeeds\n",
+      "310000 sats along 03efc 033d8 02d4b 022c6 succeeds\n",
+      "490000 sats along 03efc 03cde 02d4b 022c6 succeeds\n",
+      "420000 sats along 03efc 02160 022c2 022c6 succeeds\n",
+      "2400000 sats along 03efc 03cde 03864 021c9 03d06 03e28 022c6 succeeds\n",
+      "with an expected total fee of 61.58 satoshi\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = pay(1023, SRC,DEST, channel_graph)\n",
+    "#H = pay(920, SRC,DEST, channel_graph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4485\n",
+      "14842\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(channel_graph[SRC][x][\"balance\"] for x in channel_graph[SRC]))\n",
+    "print(sum(channel_graph[x][DEST][\"balance\"] for x,_ in channel_graph.in_edges(DEST)))\n"
    ]
   },
   {
